cabal-version:      3.8
name:               TinyMath
version:            0.1.0.0
synopsis:           Experimental Math Lib
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             madiestic
maintainer:         madjestic13@gmail.com
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall
                 -O2
                 -threaded
    extra-lib-dirs-static:
                   /usr/lib/clang/19/include/stdbool.h

library
    import:           warnings
    exposed-modules:  TinyMath
                    , Arithmetic
                    , RealArithmetic
                    , Egyptian
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1
                    , Chart
                    , Chart-cairo
                    , linear
                    , massiv
                    , inline-c
                    , template-haskell
    hs-source-dirs:   src
    c-sources:        src/halff.c
                    , src/mult.c
                    , src/length.c
                    , src/doubleIntArray.c
    default-language: GHC2021

executable TinyMath
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    -- ghc-options:                   
    build-depends:
          base ^>=4.18.2.1
        , TinyMath
        , containers
        , inline-c

    hs-source-dirs:   app
    default-language: GHC2021
